Added arXiv link for Schubert 2022

--- a/cv.tex
+++ b/cv.tex
@@ -59,10 +59,10 @@
 
 \begin{tabularx}{\textwidth}{X}
    \cellcolor{seaborn_blue}\large\textbf{\textcolor{seaborn_bg_grey_half}{Summary}} \\
-   I am currently a postdoctoral researcher at EPFL in the group of Prof.\ Nicola Marzari. Broadly, my research investigates how we can improve the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how we can construct inexpensive corrections to DFT that drastically improve its performance.
+   I am currently a postdoctoral researcher at EPFL in the group of Prof.\ Nicola Marzari. I am researching methods for improving the performance of density functional theory (DFT). Taking inspiration from known properties of the exact functional and our knowledge of the systemic errors of DFT, I (and others) have shown how to construct inexpensive corrections to DFT that drastically improve its performance.
 
    \vspace{6pt}
-   I am now looking for further opportunities where I can apply my expertise in density functional approximation development and my coding skills to develop the next generation of state-of-the-art methods for computational quantum chemistry and materials science.
+   I am now looking for further opportunities where I can apply my expertise in developing density functional approximations and my coding skills to create the next generation of state-of-the-art methods for computational quantum chemistry and materials science.
    
    \vspace{6pt}
    Career highlights thus far include...
@@ -253,63 +253,67 @@
 \end{tabularx}
 %}
 
-\begin{tabularx}{\textwidth}{l l l}
+\begin{tabularx}{\textwidth}{l l l l}
    \rowcolor{seaborn_blue}
-   \multicolumn{3}{l}{\textcolor{seaborn_bg_grey_half}{\large \textbf{Skills}}}                                                                                                                                                                                                                                                                                                   \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{l}{\textcolor{seaborn_bg_grey_half}{\large \textbf{Skills}}}                                                                                                                                                                                                                                                                                                   \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \textbf{\textit{Programming}} &                                                                                                                                                                        &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}%
-   I am a confident programmer, with experience in various languages (mostly Python and Fortran) implementing complex algorithms (mostly in the context of electronic structure calculations). I routinely employ good programming practices such as testing, documentation, and CI/CD.
+   \multicolumn{4}{X}{\textbf{\textit{Programming}}                                                                                                                                                                                                                                                                                                                            }             \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}%
+   I am a confident programmer, with experience in various languages (including Python and Fortran) and implementing complex algorithms (primarily in the context of electronic structure calculations). I routinely employ good programming practices such as testing, documentation, and CI/CD.
    }                                                            \\\noalign{\vskip-0.1pt}
    
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}%
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}%
    Using these skills, I developed \href{https://koopmans-functionals.org}{koopmans}, an open-source package for performing Koopmans functional calculations. I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and I am a developer of TOSCAM, a publically available DMFT code.}       \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}In addition to my formal training in scientific computing, during my PhD I sat in on \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge. I have also participated in coding competitions such as \href{https://hashcode.withgoogle.com/}{Google Hash Code}, \href{https://projecteuler.net/}{Project Euler}, and \href{https://www.codingame.com/home}{CodinGame}.}                                                                                                         \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}In addition to my formal training in scientific computing, during my PhD I voluntarily attended \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge. I also enjoy coding competitions such as \href{https://hashcode.withgoogle.com/}{Google Hash Code}, \href{https://projecteuler.net/}{Project Euler}, and \href{https://www.codingame.com/home}{CodinGame}.}                                                                                                         \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \multicolumn{3}{X}{\textit{Languages and interfaces}} \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\textit{Languages and interfaces}} \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Used daily                    & Python, Fortran,  Bash                                                                                                                                                  &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{2}{l}{Used daily}                    & Python, Fortran,  Bash                                                                                                                                                  &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Some experience               & C++, MPI, OpenMP, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{2}{l}{Some experience}               & C++, MPI, OpenMP, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \multicolumn{3}{X}{{\textit{Packages and software}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{{\textit{Packages and software}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Used daily                    & \multicolumn{2}{l}{vim, git, vscode, Quantum ESPRESSO, ASE, \LaTeX, SLURM                                                                                                                         }                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{2}{l}{Used daily}                    & \multicolumn{2}{l}{vim, git, vscode, Quantum ESPRESSO, ASE, \LaTeX, SLURM                                                                                                                         }                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Extensive experience      & ONETEP, TOSCAM, PyMol                                                                                                                     &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{2}{l}{Extensive experience}      & ONETEP, TOSCAM, PyMol                                                                                                                     &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Some experience               & CASTEP, Siesta, Maestro, VMD, spglib, VESTA                                                                                                                                                &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{2}{l}{Some experience}               & CASTEP, Siesta, Maestro, VMD, spglib, VESTA                                                                                                                                                &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   \textbf{\textit{Teaching}}    &                                                                                                                                                                        &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \textbf{\textit{Teaching}}    &                                                                                                       &                                                                 &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    2021-22
-                                 & \multicolumn{1}{m{0.5\textwidth}}{Lab demonstrator for master's course in atomistic and quantum simulation of materials}
+                                 & \multicolumn{2}{m{0.59\textwidth}}{Lab demonstrator for master's course in atomistic and quantum simulation of materials}
                                  & EPFL                                                                                                                                                                                                                                                                                                                                    \\\noalign{\vskip-0.1pt}
    \noalign{\vskip-0.1pt} \rowcolor{seaborn_bg_grey_half}
    2017
-                                 & \multicolumn{1}{m{0.5\textwidth}}{Supervised ten third-year students for thermal and statistical physics}
+                                 & \multicolumn{2}{m{0.59\textwidth}}{Supervised ten third-year students for thermal and statistical physics}
                                  & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    2016
-                                 & \multicolumn{1}{m{0.5\textwidth}}{Supervised nine second-year students for experimental methods, oscillations, waves, optics, quantum mechanics, and condensed matter}
+                                 & \multicolumn{2}{m{0.59\textwidth}}{Supervised nine second-year students for experimental methods, oscillations, waves, optics, quantum mechanics, and condensed matter}
                                  & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    2015
-                                 & \multicolumn{1}{m{0.5\textwidth}}{Supervised nine first-year students for physics}
+                                 & \multicolumn{2}{m{0.59\textwidth}}{Supervised nine first-year students for physics}
                                  & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
    2013
-                                 & \multicolumn{1}{m{0.5\textwidth}}{Lab demonstrator, university tutor, and private tutor for first-year biological physics}
+                                 & \multicolumn{2}{m{0.59\textwidth}}{Lab demonstrator and tutor for first-year biological physics}
                                  & University of Otago                                                                                                                                                                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}\textbf{\textit{Supervision and mentoring}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}During my postdoc I have supervised the Masters project and dissertation of Yannick Schubert. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career.'' One preprint has resulted from this work (with another in preparation).}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, of which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}During the course of my PhD I provided support to two students. I spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work. I was also the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work resulted in two publications.}                                                                                                                                                            \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}\textbf{\textit{Supervision and mentoring}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}During my postdoc I supervised Yannick Schubert, a master's student. He said that ``thanks to (Edward's) good choice of topics and guidance... achieving good results felt easy. Working with (Edward) was very motivating and a perfect start to a scientific career.'' One preprint has resulted from this work (with a second in preparation).}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, of which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}During the course of my PhD I provided support to two students. I spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work. I was also the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work resulted in two publications.}                                                                                                                                                            \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   \textbf{\textit{Outreach}}    &                                                                                                                                                                        &                                                                                                                                                                \\
+   \textbf{\textit{Grant writing}}    &                                                                                                                                                                        &         &                                                                                                                                                       \\
    \rowcolor{seaborn_bg_grey_half}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I have assisted at several information days at EPFL and at Cambridge, introducing high school students to computational materials science research.}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey_half}I have written and received several grants (e.g.\ I was awarded an EPSRC capital grant for over 30K EUR of computing hours). I have also assisted with writing grant applications (e.g.\ a Swiss National Science Foundation grant that was awarded approximately 1M EUR and ranked in the top category of all applications).}\\\noalign{\vskip-0.1pt}
+   \rowcolor{seaborn_bg_grey}
+   \textbf{\textit{Outreach}}    &                                                                                                                                                                        &         &                                                                                                                                                       \\
+   \rowcolor{seaborn_bg_grey}
+   \multicolumn{4}{X}{\cellcolor{seaborn_bg_grey}I have assisted at several information days at both EPFL and Cambridge, introducing high school students to computational materials science research.}
 \end{tabularx}
 
 % \begin{tabularx}{\textwidth}{
@@ -402,11 +406,11 @@
       \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} 
    %}
    \\
-   Y.\,Schubert, N.\,Marzari, \textbf{EBL}, \href{https://arxiv.org/abs/?????}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. arXiv:????.????? (2022)
+   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://arxiv.org/abs/2212.05950}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. arXiv:2212.05950 (2022)
    \\
-   A.\,Burgess, \textbf{EBL}, D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. arXiv:2210.17404 (2022)
+   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. arXiv:2210.17404 (2022)
    \\
-   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
+   G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
    N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
    R.\,De Gennaro, N.\,Colonna, \textbf{EBL}, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      \\ % & 1 citation                                      \\
    % 
