Added koopmans paper

--- a/cv.tex
+++ b/cv.tex
@@ -403,8 +403,11 @@
    %   m{\dimexpr0.225\textwidth-2\tabcolsep}}
    \rowcolor{seaborn_blue}
    %\multicolumn{2}{l}{
-      \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} 
+      \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} \\
    %}
+   \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. arXiv:2302.07759
+￼
+ (2023)
    \\
    Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://arxiv.org/abs/2212.05950}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. arXiv:2212.05950 (2022)
    \\
