Updated hookium paper to accepted

--- a/cv.tex
+++ b/cv.tex
@@ -405,13 +405,11 @@
    %\multicolumn{2}{l}{
       \large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}} \\
    %}
-   \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. arXiv:2302.07759
-￼
- (2023)
+   \textbf{EBL}, N.\,Colonna, R.\,De Gennaro, N.\,L.\,Nguyen, G.\,Borghi, A.\,Ferretti, I.\,Dabo, and N.\,Marzari, \href{https://arxiv.org/abs/2302.07759}{\textit{koopmans: an open-source package for accurately and efficiently predicting spectral properties with Koopmans functionals}}. arXiv:2302.07759 (2023)
    \\
-   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://arxiv.org/abs/2212.05950}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. arXiv:2212.05950 (2022)
+   Y.\,Schubert, N.\,Marzari, and \textbf{EBL}, \href{https://arxiv.org/abs/2212.05950}{\textit{Testing Koopmans spectral functionals on the analytically-solvable Hooke's atom}}. J. Chem. Phys. \emph{accepted} (2023)
    \\
-   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. \emph{accepted} (2022)
+   A.\,Burgess, \textbf{EBL}, and D.\,D.\,O'Regan, \href{https://arxiv.org/abs/2210.17404}{\textit{A DFT+U type functional derived to explicitly address the flat plane condition}}. Phys. Rev. B. \emph{accepted} (2023)
    \\
    G.\,C.\,Moore, M.\,K.\,Horton, A.\,M.\,Ganose, M.\,Siron, \textbf{EBL}, D.\,D.\,O'Regan, and K.\,A.\, Persson, \href{https://arxiv.org/abs/2201.04213}{\textit{High-throughput determination of Hubbard U and Hund J values for transition metal oxides via linear response formalism}}. arXiv:2201.04213 (2022) \\
    N.\,Colonna, R.\,De Gennaro, \textbf{EBL}, and N.\,Marzari, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.2c00161}{\textit{Koopmans spectral functionals in periodic-boundary conditions}}. J. Chem. Theory Comput. 18 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \\ %&                                                 \\
